name:                zfilters
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/zfilters#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pandoc-dot
  hs-source-dirs:      .
  main-is:             pandoc-dot.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pandoc-types >= 1.16,
                       process,
                       unix

executable pandoc-gnuplot
  hs-source-dirs:      .
  main-is:             pandoc-gnuplot.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pandoc-types >= 1.16,
                       process,
                       unix,
                       regex-compat

executable pandoc-minted
  hs-source-dirs:      .
  main-is:             pandoc-minted.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pandoc-types >= 1.16,
                       process,
                       unix

executable pandoc-sh
  hs-source-dirs:      .
  main-is:             pandoc-sh.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       pandoc-types >= 1.16,
                       process,
                       unix